--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
   <div class="flex justify-between items-start">
     <div class="logo-container">
       <a href="<%= root_url %>" class="flex items-center text-2xl font-semibold dark:text-white">
-        <%= image_tag("logo.gif", height: '50', width: '50', alt: "Echosight") %>
+        <%= image_tag("logo.png", height: '50', width: '50', alt: "Echosight") %>
         <span class="align-middle">&nbsp;Echosight</span>
       </a>
     </div>
