--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -11,7 +11,7 @@
 
 <div class="relative">
   <!-- Header Photo -->
-  <img class="h-48 w-full object-cover shadow-lg" src="<%= @user.banner_url || image_url('demo/loftwah-banner-image.png') %>" alt="Twitter Header Photo">
+  <img class="h-48 w-full object-cover shadow-lg" src="<%= @user.banner_url || image_url('default-public-page-banner.jpg') %>" alt="Twitter Header Photo">
 
   <!-- Profile Container -->
   <div class="flex items-end justify-between px-4 py-4 lg:py-8">
