--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -61,7 +61,7 @@
   <div class="email-container">
     <!-- Header -->
     <div class="header">
-      <%= image_tag("logo.gif", height: '32', width: '32', alt: "Echosight") %>
+      <%= image_tag("logo.png", height: '32', width: '32', alt: "Echosight") %>
     </div>
 
   <!-- Email Content -->
