--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -18,7 +18,7 @@
 
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
   <% if @follower_daily_data_points_for_graph.count < 2 %>
-    <p>We are awaiting more data to show the followers graph.</p>
+   <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the followers graph.</p>
   <% else %>
     <div id="followers-chart"></div>
   <% end %>
