--- a/app/views/public_pages/_posts.html.erb
+++ b/app/views/public_pages/_posts.html.erb
@@ -11,7 +11,7 @@
   </h2>
 </div>
 <div id="top-posts-tooltip" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-    Will show up to the last 28 days of tweets as the data is available showing the highest impressions first
+    Will show up to the last <%= @maximum_days_of_data %> days of tweets as the data is available showing the highest impressions first
     <div class="tooltip-arrow" data-popper-arrow></div>
 </div>
 
