Disable profile conversions graph

--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -131,7 +131,7 @@
 <%= render "public_pages/followers_graph" %>
 <%= render "public_pages/engagement_rate" %>
 <%= render "public_pages/impressions_over_time" %>
-<%= render "public_pages/profile_conversion_rate" %>
+<% #render "public_pages/profile_conversion_rate" %>
 <%= render "public_pages/posts" %>
 
 <section class="mt-2 bg-gray-100 dark:bg-gray-800 text-gray-800 dark:text-gray-200 py-8 px-4 sm:px-6 lg:px-8 rounded-xl w-full">
