--- a/app/views/public_pages/_posts.html.erb
+++ b/app/views/public_pages/_posts.html.erb
@@ -46,7 +46,7 @@
             </tr>
         </thead>
         <tbody>
-          <% @top_tweets.each do |tweet| %>
+          <% @top_posts.each do |tweet| %>
               <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                   <td class="px-6 py-4 font-medium text-gray-900 dark:text-white">
                       <%= text_with_images(tweet.text) %>
