--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -135,6 +135,7 @@
   <% #render "public_pages/profile_conversion_rate" %>
   <%= render "public_pages/posts" %>
 
+  <% unless current_user %>
   <section class="mt-2 bg-gray-100 dark:bg-gray-800 text-gray-800 dark:text-gray-200 py-8 px-4 sm:px-6 lg:px-8 rounded-xl w-full">
     <div class="w-full mx-auto text-center">
       <h2 class="text-3xl font-extrabold sm:text-4xl">
@@ -152,4 +153,5 @@
       </div>
     </div>
   </section>
+  <% end %>
   <% end %>
