--- a/app/views/layouts/_dark_mode_toggle.html.erb
+++ b/app/views/layouts/_dark_mode_toggle.html.erb
@@ -7,33 +7,35 @@
       function setThemeFromLocalStorage() {
         var storedTheme = localStorage.getItem('color-theme');
 
-        // If 'dark' is in local storage, set the icons and apply the dark class
+        // Default to dark mode if no preference is stored
+        if (!storedTheme) {
+          document.documentElement.classList.add('dark');
+          themeToggleLightIcon.classList.remove('hidden');
+          themeToggleDarkIcon.classList.add('hidden');
+          localStorage.setItem('color-theme', 'dark'); // Save default preference
+          return;
+        }
+
+        // Apply stored theme
         if (storedTheme === 'dark') {
           themeToggleLightIcon.classList.remove('hidden');
           themeToggleDarkIcon.classList.add('hidden');
-          document.documentElement.classList.add('dark'); // Make sure this targets the right element
+          document.documentElement.classList.add('dark');
         } else {
           themeToggleDarkIcon.classList.remove('hidden');
           themeToggleLightIcon.classList.add('hidden');
-          document.documentElement.classList.remove('dark'); // Make sure this targets the right element
+          document.documentElement.classList.remove('dark');
         }
       }
 
       setThemeFromLocalStorage(); // Set theme on page load
 
       themeToggleBtn.addEventListener('click', function () {
-        // Toggle icons inside button
+        var isDarkMode = document.documentElement.classList.contains('dark');
+        document.documentElement.classList.toggle('dark');
         themeToggleDarkIcon.classList.toggle('hidden');
         themeToggleLightIcon.classList.toggle('hidden');
-
-        // Toggle theme mode
-        var isDarkMode = document.documentElement.classList.contains('dark');
-        if (isDarkMode) {
-          document.documentElement.classList.remove('dark');
-          localStorage.setItem('color-theme', 'light');
-        } else {
-          document.documentElement.classList.add('dark');
-          localStorage.setItem('color-theme', 'dark');
-        }
+        localStorage.setItem('color-theme', isDarkMode ? 'light' : 'dark');
       });
-    });</script>
+    });
+</script>
