--- a/app/views/public_pages/_engagement_rate.html.erb
+++ b/app/views/public_pages/_engagement_rate.html.erb
@@ -16,8 +16,8 @@
 </div>
 
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
-<% if @engagement_rate_percentage_per_day.count < 2 %>
-   <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the followers graph.</p>
+  <% if @engagement_rate_percentage_per_day.count < 2 || @engagement_rate_percentage_per_day.all? { |data| data[:engagement_rate_percentage].zero? } %>
+    <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the followers graph.</p>
   <% else %>
     <div id="engagement-chart"></div>
   <% end %>
