--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -15,54 +15,55 @@
     <div class="tooltip-arrow" data-popper-arrow></div>
 </div>
 
-<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4 overflow-auto">
+<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
     <table class="w-full text-sm text-center text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
-                <th scope="col" class="p-1 whitespace-nowrap">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Post
                 </th>
-                <th scope="col" class="p-1 whitespace-nowrap">
+                <th scope="col" >
                     Retweets
                 </th>
-                <th scope="col" class="p-1 whitespace-nowrap">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Quotes
                 </th>
-                <th scope="col" class="p-1 whitespace-nowrap">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Likes
                 </th>
-                <th scope="col" class="p-1 whitespace-nowrap">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Replies
                 </th>
-                <th scope="col" class="p-1 whitespace-nowrap">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Impressions
                 </th>
-                <th scope="col" class="p-1 whitespace-nowrap">
+                <th scope="col" class="hidden md:table-cell p-1">
                     Engagement Rate
+                </th>
+                <th scope="col" class="hidden md:table-cell p-1">
+                    Actions
                 </th>
             </tr>
         </thead>
         <tbody>
           <% @top_posts.each do |tweet_metric| %>
               <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                    <td class="p-1">
-                      <a href="https://twitter.com/user/status/<%= tweet_metric.tweet.twitter_id %>" target="_blank" class="text-blue-600 hover:text-blue-900">
+                  <td class="px-6 py-4 font-medium text-gray-900 dark:text-white">
                       <%= text_with_images(tweet_metric.tweet.text) %>
-                      </a>
                   </td>
-                  <td class="p-1">
+                  <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.retweet_count %>
                   </td>
-                  <td class="p-1">
+                  <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.quote_count %>
                   </td>
-                  <td class="p-1">
+                  <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.like_count %>
                   </td>
-                  <td class="p-1">
+                  <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.reply_count %>
                   </td>
-                  <td class="p-1">
+                  <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.impression_count %>
                   </td>
                  <td class="px-6 py-4 relative">
@@ -80,8 +81,16 @@
                     <div class="tooltip-arrow" data-popper-arrow></div>
                   </div>
                 </td>
+                  <td class="px-6 py-4">
+                    <a href="https://twitter.com/user/status/<%= tweet_metric.tweet.twitter_id %>" target="_blank" class="text-blue-600 hover:text-blue-900">
+                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 18">
+                          <path d="M17 0h-5.768a1 1 0 1 0 0 2h3.354L8.4 8.182A1.003 1.003 0 1 0 9.818 9.6L16 3.414v3.354a1 1 0 0 0 2 0V1a1 1 0 0 0-1-1Z"></path>
+                          <path d="m14.258 7.985-3.025 3.025A3 3 0 1 1 6.99 6.768l3.026-3.026A3.01 3.01 0 0 1 8.411 2H2.167A2.169 2.169 0 0 0 0 4.167v11.666A2.169 2.169 0 0 0 2.167 18h11.666A2.169 2.169 0 0 0 16 15.833V9.589a3.011 3.011 0 0 1-1.742-1.604Z"></path>
+                      </svg>
+                    </a>
+                  </td>
               </tr>
           <% end %>
-        </tbody>
+      </tbody>
     </table>
 </div>
