--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -22,7 +22,7 @@
                 <th scope="col" class="hidden md:table-cell p-1">
                     Post
                 </th>
-                <th scope="col" >
+                <th scope="col" class="hidden md:table-cell p-1">
                     Retweets
                 </th>
                 <th scope="col" class="hidden md:table-cell p-1">
