--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -19,7 +19,7 @@
     <table class="w-full text-sm text-center text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
-                <th scope="col" class="hidden md:table-cell p-1">
+                <th scope="col" class="md:table-cell p-1">
                     Post
                 </th>
                 <th scope="col" class="hidden md:table-cell p-1">
@@ -34,13 +34,13 @@
                 <th scope="col" class="hidden md:table-cell p-1">
                     Replies
                 </th>
-                <th scope="col" class="hidden md:table-cell p-1">
+                <th scope="col" class="md:table-cell p-1">
                     Impressions
                 </th>
-                <th scope="col" class="hidden md:table-cell p-1">
+                <th scope="col" class="md:table-cell p-1">
                     Engagement Rate
                 </th>
-                <th scope="col" class="hidden md:table-cell p-1">
+                <th scope="col" class="md:table-cell p-1">
                     Actions
                 </th>
             </tr>
@@ -63,7 +63,7 @@
                   <td class="hidden md:table-cell p-1">
                       <%= tweet_metric.reply_count %>
                   </td>
-                  <td class="hidden md:table-cell p-1">
+                  <td class="md:table-cell p-1">
                       <%= tweet_metric.impression_count %>
                   </td>
                  <td class="px-6 py-4 relative">
