Remove contact details address from mailer

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -71,17 +71,29 @@
 
     <!-- Footer -->
     <div class="footer">
-      <p>If you no longer wish to receive these emails, you can <a href="UNSUBSCRIBE_URL_PLACEHOLDER">unsubscribe here</a>.</p>
-      <p>
+      <%
+=begin%>
+ <p>If you no longer wish to receive these emails, you can <a href="UNSUBSCRIBE_URL_PLACEHOLDER">unsubscribe here</a>.</p>
+<%
+=end%>
+      <%
+=begin%>
+ <p>
         Echosight Inc.<br>
         1234 Example Street<br>
         City, State, Zip Code<br>
         United States
       </p>
-      <p>
+<%
+=end%>
+      <%
+=begin%>
+ <p>
         This email was sent to EMAIL_ADDRESS_PLACEHOLDER.<br>
         If you did not sign up for this subscription, please ignore this email.
       </p>
+<%
+=end%>
     </div>
   </div>
 </body>
