--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -48,7 +48,7 @@
                     <% if current_or_guest_user.identity && current_or_guest_user.identity.image_url.present? %>
                       <img class="w-8 h-8 rounded-full" src="<%= current_or_guest_user.identity.image_url %>" alt="user photo">
                     <% else %>
-                      <img class="w-8 h-8 rounded-full" src="<%= image_url("default-avatar") %>" alt="user photo">
+                      <img class="w-8 h-8 rounded-full" src="<%= image_url("default_avatar") %>" alt="user photo">
                     <% end %>
 
                 </button>
